--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 </head>
 <body>
     <h1>hello world</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia inventore magni illo fuga asperiores voluptas minima nam quasi aliquam enim optio mollitia deleniti, nulla nobis fugit culpa! Iure, quod cum?</p>
 </body>
 </html>
